managed to get simple form up and running

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@server/*": ["./server/src/*"],
-      "@web/*": ["./client/*"]
+      "@client/*": ["./client/src/*"]
     }
   }
 }
