--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@trpc/server": "^10.45.2",
     "@types/pg": "^8.11.5",
+    "date-fns": "^3.6.0",
     "kysely": "^0.27.3",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
