--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -34,7 +34,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
-    "zod": "^3.22.4"
+    "@schema": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20",
