--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@server/*": ["./server/src/*"],
-      "@client/*": ["./client/src/*"]
+      "@server/*": ["./apps/server/src/*"],
+      "@client/*": ["./apps/client/src/*"]
     }
   }
 }
