--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -33,7 +33,8 @@
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@schema": "workspace:*"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -56,8 +57,10 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "@schema": "workspace:*"
+    "typescript": "^5.1.3"
+  },
+  "publishConfig": {
+    "directory": "dist"
   },
   "jest": {
     "moduleFileExtensions": [
